--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       // 指定格式：
       // [targetresult] + \n + "0.382" + [v-0.382] + \n + "0.5=" + [v-0.5] + \n + "0.618" + [v-0.618]
-      const payload = `${t}\n0.382${v382}\n0.5=${v50}\n0.618${v618}`;
+      const payload = `${t}\n0.382=${v382}\n0.5=${v50}\n0.618${v618}`;
 
       try {
         await navigator.clipboard.writeText(payload);
