--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     // 複製指定格式
     async function copyBundle() {
-      const t = document.getElementById('targetresult').textContent.trim();
+      const t = document.getElementById('target-title').textContent.trim();
       const v382 = document.getElementById('v-0.382').textContent.trim();
       const v50 = document.getElementById('v-0.5').textContent.trim();
       const v618 = document.getElementById('v-0.618').textContent.trim();
