--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       const v50  = document.getElementById('v-0.5').textContent.trim();
       const v618 = document.getElementById('v-0.618').textContent.trim();
 
-      const payload = `${t}\n0.382=${v382}\n0.5=${v50}\n0.618${v618}`;
+      const payload = `${t}\n0.382=${v382}\n0.5=${v50}\n0.618=${v618}`;
 
       try {
         await navigator.clipboard.writeText(payload);
