--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     <section class="card">
       <div class="row">
-        <label for="lowest">最低</label>
-        <input id="lowest" type="number" step="0.01" placeholder="輸入最低價值" />
+        <label for="lowest">值1</label>
+        <input id="lowest" type="number" step="0.01" placeholder="輸入第1個值" />
       </div>
       <div class="row">
-        <label for="highest">最高</label>
-        <input id="highest" type="number" step="0.01" placeholder="輸入最高價值" />
+        <label for="highest">值2</label>
+        <input id="highest" type="number" step="0.01" placeholder="輸入第2個值" />
       </div>
 
       <div class="table-wrap">
